--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="hw1.css">
+    <link rel="stylesheet" href="css/styling.css">
 </head>
 <body>
     <script>
@@ -29,7 +29,7 @@
     </script>
     <div class="container">
         <p class="title">Web application design<br>Homework 1</p>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvhss1dREIsxtFFDEkgtEIarxsduFgwNKP0mZQu-_HUBhr0eIU8nzu1rBR6Bpt-Ysms2s&usqp=CAU" alt="">
+        <img src="image/GA.png" alt="">
         <div class="windowSize">Current window size : <span id="width"></span> x <span id="height"></span>.</div>
     </div>
 </body>
