add current travel time of each stations

--- a/hw5/hw5.html
+++ b/hw5/hw5.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="container">
-        <h4>Instant metro schedule</h4>
+        <h4>Metro schedule</h4>
         <div class="jit_schedule">
             <h3 id="origin_station">台北車站</h3><h3 class="travel_time">--0Min(s)0Sec(s)-></h3>
         </div>
