--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XGZ8QTP5E7"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
 
-        gtag('config', 'G-XGZ8QTP5E7');
+        variable = " ";
+
     </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,16 +14,6 @@
     <link rel="stylesheet" href="css/styling.css">
 </head>
 <body>
-    <script>
-        document.addEventListener("DOMContentLoaded", displayWindowSize);
-        function displayWindowSize(){
-            const width = window.innerWidth;
-            const height = window.innerHeight;
-            document.getElementById("width").innerHTML = width;
-            document.getElementById("height").innerHTML = height;
-        }
-        window.addEventListener("resize", displayWindowSize);
-    </script>
     <div class="container">
         <p class="title">Web application design<br>Homework 2</p>
         <img src="image/GA.png" alt="">
